# sony-headphones-hack

./: .gitignore  README.md  certificate-pinning-in-android-reference.txt  cfg_1516864940.json  dnsspoof.conf  ip-addresses-from-networklog.txt  logcat-logs.txt  notes.txt  sony-headphones-app-networklog-2021-03-10.csv  trace-msmnile-QKQ1.190929.002-2021-03-09-23-40-10.perfetto-trace
audio-file-decoder/: requirements.txt
audio-file-decoder/src/: audio-file-decode.py  dutch-language-audio-hexdump  dutch-language-audio-hexdump--audio-data-only  dutch-language-audio-hexdump--verbose  english-language-audio-hexdump  english-language-audio-hexdump--verbose
base-apk--apktool-output/: AndroidManifest.xml  apktool.yml
base-apk--apktool-output/original/: AndroidManifest.xml
base-apk-extracted/: classes2.dex  resources.arsc
bug-report-folder/: dumpstate_log.txt  main_entry.txt
copied-from-nexus-5--keystore-data/: 1000_CACERT_CA+PCert+Pfor+PSony+PHeadphones+PMitm  1000_CACERT_Sony+PHeadphones+PHack+PCert  1000_CACERT_authority+Pfor+Pheadphones  1000_USRCERT_bdcore+]cert  1000_USRCERT_music+]center+]cdn
java-response-reader/: build-and-run.sh  out.txt  pom.xml
keys-from-app/: CERT.RSA  CERT.SF
rust-mitm-server/: Cargo.toml
rust-mitm-server/src/: certificate-grabbed-at-setup  certificate-grabbed-at-setup--text  main.rs  output--dutch--working.txt  output--german--working.txt  output--many--working.txt  output--working.txt  output.txt  server.crt  server.key  working-server-cert.crt  working-server-key.key
scripts/: dnschef-run.sh
(+21207 files in other folders)
