[package]
name = "rust-mitm-server"
version = "0.1.0"
authors = ["Ethan Gaebel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
reqwest = {version = "0.11.2", features = ["blocking", "json"]}
serde = "1.0.125"
serde_json = {version = "1.0.64" }