[package]
name = "rust-mitm-server"
version = "0.1.0"
authors = ["Ethan Gaebel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features = ["rustls"]}
env_logger = "0.8.3"
lazy_static = "1.4.0"
reqwest = {version = "0.11.2", features = ["blocking", "cookies", "json"]}
rustls = "0.18.0"
serde = "1.0.125"
serde_json = {version = "1.0.64" }